# rust-xdiff

./: Cargo.toml
examples/: config.rs  similar.rs
fixures/: test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
