[package]
name = "rust-xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
console = "0.15.2"
http-serde = "1.1.2"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
similar = { version = "2.2.0", features = ["inline", "bytes"] }
tokio = { version = "1.21.2", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
